; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/os_dep/extr_mon.c_mon_recv_decrypted.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/os_dep/extr_mon.c_mon_recv_decrypted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.sk_buff = type { i32, i32 }

@CHECKSUM_UNNECESSARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i32*, i32, i32, i32)* @mon_recv_decrypted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mon_recv_decrypted(%struct.net_device* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.net_device*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.sk_buff*, align 8
  store %struct.net_device* %0, %struct.net_device** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load %struct.net_device*, %struct.net_device** %6, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call %struct.sk_buff* @netdev_alloc_skb(%struct.net_device* %12, i32 %13)
  store %struct.sk_buff* %14, %struct.sk_buff** %11, align 8
  %15 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %16 = icmp ne %struct.sk_buff* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %5
  br label %37

18:                                               ; preds = %5
  %19 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @skb_put_data(%struct.sk_buff* %19, i32* %20, i32 %21)
  %23 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @unprotect_frame(%struct.sk_buff* %23, i32 %24, i32 %25)
  %27 = load i32, i32* @CHECKSUM_UNNECESSARY, align 4
  %28 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %29 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %31 = load %struct.net_device*, %struct.net_device** %6, align 8
  %32 = call i32 @eth_type_trans(%struct.sk_buff* %30, %struct.net_device* %31)
  %33 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %34 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  %35 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %36 = call i32 @netif_rx(%struct.sk_buff* %35)
  br label %37

37:                                               ; preds = %18, %17
  ret void
}

declare dso_local %struct.sk_buff* @netdev_alloc_skb(%struct.net_device*, i32) #1

declare dso_local i32 @skb_put_data(%struct.sk_buff*, i32*, i32) #1

declare dso_local i32 @unprotect_frame(%struct.sk_buff*, i32, i32) #1

declare dso_local i32 @eth_type_trans(%struct.sk_buff*, %struct.net_device*) #1

declare dso_local i32 @netif_rx(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
